# vkexperiments

./: .clang-format  .gitignore  CMakeLists.txt
res/: shader.frag  shader.vert
src/: app.cpp  app.hpp  main.cpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp
src/vke/: app.cpp  app.hpp  mesh.cpp  mesh.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  state_track.cpp  state_track.hpp  util.hpp
